@@ -102,7 +102,10 @@ public class OAuth20Service extends OAuthService<OAuth2AccessToken> {
         final OAuthRequest request = new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint());
         final OAuthConfig config = getConfig();
         request.addParameter(OAuthConstants.CLIENT_ID, config.getApiKey());
-        request.addParameter(OAuthConstants.CLIENT_SECRET, config.getApiSecret());
+        final String apiSecret = config.getApiSecret();
+        if (apiSecret != null) {
+            request.addParameter(OAuthConstants.CLIENT_SECRET, apiSecret);
+        }
         request.addParameter(OAuthConstants.CODE, code);
         request.addParameter(OAuthConstants.REDIRECT_URI, config.getCallback());
         final String scope = config.getScope();
