@@ -1,4 +1,5 @@
 [SNAPSHOT]
+ * make client_secret optional in OAuth2 while requesting AccessToken (if set to null, it's not required by OAuth2 specs)
  * move OAuth1 SignatureType to ServiceBuilder to API
  * add body for PATCH HTTP method
 
